k8s/client-cluster-ip-service.yaml
# Manages the access to client pods matching by selector "component: web"
# Other pods can access client pods via port 3000 which redirects to port 3000 inside client pods.
# These two ports don't have to be the same
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
